[gd_scene load_steps=13 format=3 uid="uid://d17scbjy1b8ec"]

[ext_resource type="Script" path="res://Main.gd" id="1_fslwj"]
[ext_resource type="PackedScene" uid="uid://cmgk57pe2cetq" path="res://wires.tscn" id="2_ocjha"]
[ext_resource type="Texture2D" uid="uid://d6ck5w5ylql" path="res://textures/w1.png" id="2_wchq5"]
[ext_resource type="PackedScene" uid="uid://b5f3j1apo7b67" path="res://keypads.tscn" id="3_qbjf2"]
[ext_resource type="Texture2D" uid="uid://b8iyges17o0wo" path="res://textures/d1.png" id="3_y0s0v"]
[ext_resource type="Texture2D" uid="uid://bn5qgpb4f8sfp" path="res://textures/p1.png" id="4_sfsi7"]
[ext_resource type="PackedScene" uid="uid://dh238erm04bl0" path="res://count.tscn" id="4_xf6ks"]
[ext_resource type="PackedScene" uid="uid://dlw8f7lveseg3" path="res://password.tscn" id="5_1tl8b"]
[ext_resource type="Texture2D" uid="uid://cudxkrbcsjlii" path="res://textures/k1.png" id="5_aqqjc"]
[ext_resource type="PackedScene" uid="uid://be6xfc1k75axq" path="res://count_2.tscn" id="6_6ucyb"]
[ext_resource type="PackedScene" uid="uid://njoknwet2k77" path="res://win.tscn" id="11_kap4x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nmepr"]

[node name="Main" type="Node2D"]
script = ExtResource("1_fslwj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 891.0
offset_bottom = 540.0
color = Color(0.6, 0.52549, 0.458824, 1)

[node name="w1" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 13.0
offset_right = 329.0
offset_bottom = 246.0
texture = ExtResource("2_wchq5")

[node name="d1" type="TextureRect" parent="."]
offset_left = 362.0
offset_top = 262.0
offset_right = 671.0
offset_bottom = 495.0
texture = ExtResource("3_y0s0v")

[node name="p1" type="TextureRect" parent="."]
offset_left = 360.0
offset_top = 16.0
offset_right = 669.0
offset_bottom = 249.0
texture = ExtResource("4_sfsi7")

[node name="k1" type="TextureRect" parent="."]
offset_left = 22.0
offset_top = 266.0
offset_right = 327.0
offset_bottom = 499.0
texture = ExtResource("5_aqqjc")

[node name="wire" type="Button" parent="."]
offset_left = 144.0
offset_top = 116.0
offset_right = 211.0
offset_bottom = 162.0
text = "Wires"

[node name="keypad" type="Button" parent="."]
offset_left = 132.0
offset_top = 352.0
offset_right = 199.0
offset_bottom = 398.0
text = "Keypad"

[node name="passwords" type="Button" parent="."]
offset_left = 463.0
offset_top = 113.0
offset_right = 546.0
offset_bottom = 159.0
text = "Password"

[node name="con2" type="Button" parent="."]
offset_left = 489.0
offset_top = 352.0
offset_right = 556.0
offset_bottom = 398.0

[node name="Count" parent="." instance=ExtResource("4_xf6ks")]
position = Vector2(0, 83)

[node name="keypads" parent="." instance=ExtResource("3_qbjf2")]
visible = false

[node name="wires" parent="." instance=ExtResource("2_ocjha")]
visible = false

[node name="password" parent="." instance=ExtResource("5_1tl8b")]
visible = false

[node name="return" type="Button" parent="."]
offset_left = 351.0
offset_top = 500.0
offset_right = 538.0
offset_bottom = 538.0
text = "Return"

[node name="pause" type="Button" parent="."]
offset_left = 805.0
offset_top = 8.0
offset_right = 882.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_nmepr")
text = "⏸️"

[node name="count2" parent="." instance=ExtResource("6_6ucyb")]
visible = false
position = Vector2(-91, 29)

[node name="win" parent="." instance=ExtResource("11_kap4x")]
visible = false

[connection signal="t" from="." to="." method="_on_t"]
[connection signal="pressed" from="wire" to="." method="_on_wire_pressed"]
[connection signal="pressed" from="keypad" to="." method="_on_keypad_pressed"]
[connection signal="pressed" from="passwords" to="." method="_on_passwords_pressed"]
[connection signal="pressed" from="con2" to="." method="_on_con_2_pressed"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
